--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,8 +4,15 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet", href="/styles/styles.css")
         title Guess Mine
     body 
-        h1 Hello
+        .loginBox 
+            form#jsLogin
+                input(placeholder="What is your nickname", type="text")
+        .gameContainer#jsGame 
+            h1 Your are logged in    
+        script. 
+            window.events = !{events}  
         script(src="/socket.io/socket.io.js")
-        script(src="/index.js")
+        script(src="/js/main.js")
