--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,7 +12,7 @@ html(lang="en")
                 input(placeholder="What is your nickname", type="text")
         .gameContainer#jsGame 
             h1 Your are logged in    
-            #jsNotifications
+            div#jsNotifications
         script. 
             window.events = !{events}  
         script(src="/socket.io/socket.io.js")
