--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -13,8 +13,9 @@ html(lang="en")
             
         .gameContainer#jsGame 
             .main
+                #jsNotifs
                 canvas.canvas#jsCanvas
-                .controls#controls
+                .controls#jsControls
                     button#jsMode Fill
                     .colors
                         .color.jsColor(style="background-color:rgb(0, 0, 0)")
@@ -27,6 +28,8 @@ html(lang="en")
                         .color.jsColor(style="background-color:rgb(0,122,255)")
                         .color.jsColor(style="background-color:rgb(88,86,214)")
             .chat
+                .player__board#jsPBoard
+
                 ul.chat__messages#jsMessages 
                 form.chat__form#jsSendMsg 
                     input(placeholder="Write a message")
